--- a/HomeManager/View/StickyNotes/StickyNotesView.xaml
+++ b/HomeManager/View/StickyNotes/StickyNotesView.xaml
@@ -157,9 +157,10 @@
                                 Name="txtTitle"
                                 Grid.Row="0"
                                 Grid.Column="1"
-                                Margin="5"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Center"
+                                Width="auto"
+                                Margin="0,5,0,5"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
                                 Foreground="{Binding ElementName=rtbInput, Path=Background}"
                                 Style="{StaticResource StickyNoteTextBox}"
                                 Text="{Binding Title, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
