--- a/HomeManager/Resources/StylesDictionary.xaml
+++ b/HomeManager/Resources/StylesDictionary.xaml
@@ -871,6 +871,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="RibbonButton">
                     <Border
+                        Padding="1"
                         Background="{TemplateBinding Background}"
                         BorderBrush="{StaticResource myDagboekButtonIconColor}"
                         BorderThickness="{TemplateBinding BorderThickness}">
@@ -886,7 +887,7 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="DeepSkyBlue" />
+                <Setter Property="Background" Value="LightBlue" />
                 <Setter Property="BorderThickness" Value="1" />
             </Trigger>
         </Style.Triggers>
@@ -931,11 +932,11 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsChecked" Value="True">
-                <Setter Property="Background" Value="Red" />
+                <Setter Property="Background" Value="LightGray" />
                 <Setter Property="BorderThickness" Value="1" />
             </Trigger>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="DeepSkyBlue" />
+                <Setter Property="Background" Value="LightBlue" />
                 <Setter Property="BorderThickness" Value="1" />
             </Trigger>
         </Style.Triggers>
