--- a/HomeManager/View/Personen/ucPersoon.xaml
+++ b/HomeManager/View/Personen/ucPersoon.xaml
@@ -65,23 +65,23 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="35" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
                     <RowDefinition Height="50" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="4*" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <ListBox
                     Name="UserListView"
-                    Grid.Row="2"
+                    Grid.Row="1"
                     Grid.RowSpan="7"
                     Grid.Column="1"
                     Width="250"
+                    MaxHeight="500"
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                     <ListBox.ItemContainerStyle>
@@ -184,42 +184,42 @@
 
                 <TextBlock
                     x:Name="Naam"
-                    Grid.Row="2"
+                    Grid.Row="1"
                     Grid.Column="2"
                     Margin="5"
                     Text="Naam"
                     TextAlignment="Right" />
                 <TextBox
                     x:Name="txtNaam"
-                    Grid.Row="2"
+                    Grid.Row="1"
                     Grid.Column="3"
                     Margin="5"
                     Text="{Binding MijnSelectedItem.Naam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
                 <TextBlock
                     x:Name="Voornaam"
-                    Grid.Row="3"
+                    Grid.Row="2"
                     Grid.Column="2"
                     Margin="5"
                     Text="Voornaam"
                     TextAlignment="Right" />
                 <TextBox
                     x:Name="txtVoorNaam"
-                    Grid.Row="3"
+                    Grid.Row="2"
                     Grid.Column="3"
                     Margin="5"
                     Text="{Binding MijnSelectedItem.Voornaam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
                 <TextBlock
                     x:Name="Foto"
-                    Grid.Row="4"
+                    Grid.Row="3"
                     Grid.Column="2"
-                    Margin="0,19,0,10"
                     Text="Foto"
                     TextAlignment="Right" />
 
                 <StackPanel
-                    Grid.Row="4"
+                    Grid.Row="3"
+                    Grid.RowSpan="2"
                     Grid.Column="3"
                     Orientation="Horizontal">
                     <Border
