--- a/HomeManager/View/Security/ucAccount.xaml
+++ b/HomeManager/View/Security/ucAccount.xaml
@@ -36,7 +36,7 @@
                         Margin="10,0,0,0"
                         VerticalAlignment="Center"
                         FontSize="20"
-                        Foreground="White"
+                        Foreground="{StaticResource myWerkBalk}"
                         Text="Accounts" />
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="top" />
