--- a/HomeManager/View/Security/ucUnlockUser.xaml
+++ b/HomeManager/View/Security/ucUnlockUser.xaml
@@ -32,10 +32,13 @@
                         Data="{StaticResource myUnlock}"
                         Fill="{StaticResource myWerkBalk}"
                         Stretch="Fill" />
-                    <Label
-                        Margin="5,0,0,0"
-                        Content="Ontgrendel Computer"
-                        Foreground="{StaticResource myWerkBalk}" />
+                    <TextBlock
+                        Margin="10,0,0,0"
+                        VerticalAlignment="Center"
+                        FontSize="20"
+                        Foreground="{StaticResource myWerkBalk}"
+                        Text="Ontgrendel Computer" />
+
 
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="top" />
@@ -170,7 +173,7 @@
                                                 Color="Black" />
                                         </Border.Effect>
                                         <Border.Background>
-                                            <ImageBrush ImageSource="{Binding Persoon.Foto, TargetNullValue='https://p92.com/binaries/content/gallery/p92website/technologies/c-sharp-overview.png'}" Stretch="UniformToFill" />
+                                            <ImageBrush ImageSource="{Binding Persoon.Foto, TargetNullValue='https://miro.medium.com/v2/resize:fit:1400/1*w0u2TZpEp3WfKMrlL5jTSw.png'}" Stretch="UniformToFill" />
                                         </Border.Background>
                                     </Border>
 
