--- a/HomeManager/Resources/StylesDictionary.xaml
+++ b/HomeManager/Resources/StylesDictionary.xaml
@@ -715,7 +715,7 @@
                         Height="30"
                         Background="{StaticResource myBackground}"
                         BorderBrush="{StaticResource myTitleBar}"
-                        BorderThickness="1"
+                        BorderThickness="0"
                         CornerRadius="15">
                         <Path
                             Width="15"
@@ -735,12 +735,20 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ContentControl">
-                    <Path
-                        Width="15"
-                        Height="15"
-                        Data="{StaticResource myOpenUCButton}"
-                        Fill="{StaticResource myTitleBar}"
-                        Stretch="Fill" />
+                    <Border
+                        Width="30"
+                        Height="30"
+                        Background="{StaticResource myBackground}"
+                        BorderBrush="{StaticResource myTitleBar}"
+                        BorderThickness="0"
+                        CornerRadius="15">
+                        <Path
+                            Width="15"
+                            Height="15"
+                            Data="{StaticResource myOpenUCButton}"
+                            Fill="{StaticResource myTitleBar}"
+                            Stretch="Fill" />
+                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -759,7 +767,7 @@
                         Height="30"
                         Background="{StaticResource myBackground}"
                         BorderBrush="{StaticResource myTitleBar}"
-                        BorderThickness="1"
+                        BorderThickness="0"
                         CornerRadius="15">
                         <Path
                             Width="15"
@@ -832,12 +840,20 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ContentControl">
-                    <Path
-                        Width="15"
-                        Height="15"
-                        Data="{StaticResource myUploadButton}"
-                        Fill="{StaticResource myTitleBar}"
-                        Stretch="Fill" />
+                    <Border
+                        Width="30"
+                        Height="30"
+                        Background="{StaticResource myBackground}"
+                        BorderBrush="{StaticResource myTitleBar}"
+                        BorderThickness="0"
+                        CornerRadius="15">
+                        <Path
+                            Width="15"
+                            Height="15"
+                            Data="{StaticResource myDeleteButton}"
+                            Fill="{StaticResource myTitleBar}"
+                            Stretch="Fill" />
+                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
